kubernets/istio/ytj/ytj-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app
spec:
  hosts:
  - "wx.a.nonsense.test.msjiay.com"
  - "wx.a.app.test.msjiay.com"
  - "wx.app.test.msjiay.com"
  - "wx.nonsense.test.msjiay.com"
  gateways:
  - app-gateway
  http:
  - name: "ytj-app-route"
    route:
    - destination:
        host: ytj-app
        port:
          number: 80
